Bug 1392755 - Use a normal thread instead of LazyIdleThread for QuotaManager IO thread. r=jvarga

QuotaManager is now a hip, popular subsystem used by many consumers, many of
which are now latency sensitive.  There is no longer any meaningful benefit to
using LazyIdleThread, but there are latency downsides.  Also, LazyIdleThread
has some bugs at shutdown and complications for callers that use
NS_GetCurrentThread().  So, begone LazyIdleThread!